--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   记录糖尿病带病生活的一些心得，一些想法。
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+google_analytics: UA-40984938-4
 # twitter_username: jekyllrb
 # github_username:  jekyll
 
